@@ -4,12 +4,12 @@
 DH *get_dh512()
 	{
 	static unsigned char dh512_p[]={
-		0xF1,0x28,0x95,0x15,0x27,0xE4,0x53,0x83,0x57,0xFD,0x65,0xB2,
-		0x18,0x7D,0x90,0x68,0xCA,0x00,0xF8,0x43,0x02,0x3D,0x44,0xCB,
-		0xD0,0x81,0x6D,0x47,0x3D,0x70,0x5C,0xCF,0x19,0xF0,0x26,0x05,
-		0x41,0xFD,0x59,0x13,0xC3,0x47,0x90,0xFC,0x38,0xC4,0xA8,0xE4,
-		0x63,0x65,0x6E,0x10,0x3F,0xE2,0x9A,0xAB,0x8B,0x73,0x83,0xF6,
-		0x84,0x87,0xF7,0x83,
+		0xF2,0xBB,0xC1,0x35,0x68,0xF3,0x1F,0x4A,0x9C,0x64,0x85,0xC8,
+		0xEB,0x9F,0x32,0xA8,0xA8,0x39,0x9B,0x5C,0x4E,0x62,0xA5,0x90,
+		0x24,0x37,0x2D,0x03,0xAD,0x8C,0x23,0x76,0xE9,0x5F,0x19,0xC8,
+		0xCB,0xC5,0xF6,0xE1,0xEA,0x40,0x06,0xBC,0x24,0xA3,0x07,0x07,
+		0xE1,0xE9,0x2A,0x33,0x67,0x42,0xAE,0x0D,0x20,0x74,0x87,0x93,
+		0x34,0xA7,0xBA,0xFB,
 		};
 	static unsigned char dh512_g[]={
 		0x02,
